--- a/react_web_front/.env
+++ b/react_web_front/.env
@@ -1,1 +1,2 @@
-REACT_APP_BACK_SERVER=http://localhost:9999
+# 다른 곳(ex.집)에서 실행할 때 밑에 아이피 주소를 해당 컴퓨터(ex.집 컴퓨터) 주소로 바꿔야함
+REACT_APP_BACK_SERVER=http://192.168.10.205:9999
